prod_snapshot_2015-09-24_1030/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>APIOnly_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>APIOnly ExternalId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Auto_Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <label>Components</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4 CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8 CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Count_SEO__c</fullName>
        <formula>IF(SEO_Product__c = True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count SEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Social__c</fullName>
        <formula>IF(Social_Media_Notice__c = True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Social</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Web__c</fullName>
        <formula>IF( Web_Development_Product__c = True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Web</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_No_Start_Date_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin Field To Manage Rule &quot;Start Date Force&quot;.  If Checked, This Will Not Require A Start Date.</description>
        <label>Digital - No Start Date Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Email_Recipients__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag should be used to determine if Email Recipients text box should be editable or NOT</description>
        <label>Edit Email Recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_NumberOfHours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Number Of Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_NumberOfLocations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Number Of Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Qty_ContractMonths__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Qty Contract Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Qty_LineItems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Qty LineItems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasMediaSpend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Media Spend</description>
        <label>Has Media Spend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_In_Monthly_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked = product is a recurring change and will be included in the onthly Total figure
Unchecked = Product is a one-time fee</description>
        <inlineHelpText>Checked = product is a recurring change and will be included in the onthly Total figure
Unchecked = Product is a one-time fee</inlineHelpText>
        <label>Include In Monthly Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <description>USCP Custom Field: Invoice Frequency</description>
        <label>Invoice Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_StatusToCreateILI__c</fullName>
        <label>Status to Create ILIs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Marker__c</fullName>
        <description>Since some products may not hit the &apos;Live&apos; status, and instead will be moved to Fulfilled, the Live Notification will need to address this difference.</description>
        <label>Live Marker</label>
        <picklist>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MACTIVE_ProductCode__c</fullName>
        <description>Mactive Product Code</description>
        <label>MACTIVE Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Product Group</description>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back to school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cookware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile-Only Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retargeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Renewable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEO Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Bus_Days__c</fullName>
        <label>SLA - Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Product_Type__c</fullName>
        <label>SLA Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Custom Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile-Only Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retargeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template Website - T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template Website - T3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Setup Fee Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Setup Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Social_Media_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, Sends A Notice To The Social Media Team When An Opportunity Is Closed/Won With This Product Included.</inlineHelpText>
        <label>Social Media Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseMatrix__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked the system looks at &apos;Automated Rate Calculation&apos; to determine the product price else PriceBookEntry</description>
        <label>UseMatrix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Development_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Development Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCommon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCommon</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Active_Products_Type</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>SLA_Product_Type__c</columns>
        <columns>SLA_Bus_Days__c</columns>
        <columns>Count_SEO__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.SML_Product</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products Type</label>
    </listViews>
    <listViews>
        <fullName>AllActvieProductsRenewable</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Renewable__c</columns>
        <columns>Setup_Fee_Required__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.SML_Product</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Renewable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Products- Renewable</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Setup_Fee_Required__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.SML_Product</value>
        </filters>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>AllProductsRevSched</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.REV_SCHEDULE_ENABLED</columns>
        <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
        <columns>PRODUCT2.REV_SCHEDULE_INTERVAL</columns>
        <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>HAS_DEF_REV_SCHEDULE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.SML_Product</value>
        </filters>
        <label>All Products RevSched</label>
    </listViews>
    <listViews>
        <fullName>EmailBlast</fullName>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Setup_Fee_Required__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>equals</operation>
            <value>Email Blast</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Setup_Fee__c</field>
            <operation>equals</operation>
        </filters>
        <label>Email Blast</label>
    </listViews>
    <listViews>
        <fullName>NON_USCP_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>HAS_DEF_REV_SCHEDULE</columns>
        <columns>PRODUCT2.REV_SCHEDULE_ENABLED</columns>
        <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
        <columns>PRODUCT2.REV_SCHEDULE_INTERVAL</columns>
        <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIOnly_ExternalId__c</field>
            <operation>equals</operation>
        </filters>
        <label>NON USCP Products</label>
    </listViews>
    <listViews>
        <fullName>ProductLiveStatusReview</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Live_Marker__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.SML_Product</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Product Live Status Review</label>
    </listViews>
    <listViews>
        <fullName>Social_Media_Notices</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Social_Media_Notice__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.SML_Product</value>
        </filters>
        <label>Social Media</label>
    </listViews>
    <listViews>
        <fullName>USCP_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>UseMatrix__c</columns>
        <columns>HasMediaSpend__c</columns>
        <columns>Invoice_Frequency__c</columns>
        <columns>Invoice_StatusToCreateILI__c</columns>
        <columns>Edit_NumberOfHours__c</columns>
        <columns>Edit_NumberOfLocations__c</columns>
        <columns>Edit_Qty_ContractMonths__c</columns>
        <columns>Edit_Qty_LineItems__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APIOnly_ExternalId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>USCP Products</label>
    </listViews>
    <recordTypes>
        <fullName>Burlington</fullName>
        <active>false</active>
        <description>Burlington Products</description>
        <label>Burlington</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cincinnati</fullName>
        <active>false</active>
        <label>Cincinnati</label>
    </recordTypes>
    <recordTypes>
        <fullName>DealChicken_Product</fullName>
        <active>true</active>
        <label>DealChicken Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Des_Moines</fullName>
        <active>false</active>
        <label>Des Moines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Indianapolis</fullName>
        <active>false</active>
        <label>Indianapolis</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reno</fullName>
        <active>false</active>
        <label>Reno</label>
    </recordTypes>
    <recordTypes>
        <fullName>SML_II</fullName>
        <active>false</active>
        <label>SML II</label>
    </recordTypes>
    <recordTypes>
        <fullName>SML_Product</fullName>
        <active>true</active>
        <label>SML Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>TAR_Active</fullName>
        <active>false</active>
        <label>TAR Active</label>
    </recordTypes>
</CustomObject>